--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Hello World</title>
   <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="fab.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" href="hello-icon-152.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,5 +21,30 @@
     <h1 class="title">Hello, Marcelo!</h1>
   </div>
   <script src="main.js"></script>
+  
+  <div class="fab">
+  <button class="main">
+  </button>
+  <ul>
+    <li>
+      <label for="opcao1">Opção 1</label>
+      <button id="opcao1">
+      ⎈
+      </button>
+    </li>
+    <li>
+      <label for="opcao2">Opção 2</label>
+      <button id="opcao2">
+      ⎗
+      </button>
+    </li>
+    <li>
+      <label for="opcao3">Opção 3</label>
+      <button id="opcao3">
+      ☏
+      </button>
+    </li>
+  </ul>
+</div>
 </body>
 </html>
