change github io to homanagem page

--- a/index.html
+++ b/index.html
@@ -1,50 +1,28 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
-  <meta charset="utf-8">
-  <title>Hello World</title>
-  <link rel="manifest" href="/manifest.json">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="fab.css">
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="hello-icon-152.png">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="white"/>
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Hello World">
-  <meta name="msapplication-TileImage" content="hello-icon-144.png">
-  <meta name="msapplication-TileColor" content="#FFFFFF">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Feliz dia 12</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap" rel="stylesheet" />
 </head>
-<body class="fullscreen">
-  <div class="container">
-    <h1 class="title">Hello, Marcelo!</h1>
-  </div>
-  <script src="main.js"></script>
-  
-  <div class="fab">
-  <button class="main">
-  </button>
-  <ul>
-    <li>
-      <label for="opcao1">Opção 1</label>
-      <button id="opcao1">
-      ⎈
-      </button>
-    </li>
-    <li>
-      <label for="opcao2">Opção 2</label>
-      <button id="opcao2">
-      ⎗
-      </button>
-    </li>
-    <li>
-      <label for="opcao3">Opção 3</label>
-      <button id="opcao3">
-      ☏
-      </button>
-    </li>
-  </ul>
-</div>
+<body>
+
+    <div class="side-text">
+    <div>Bem vinda, Bruna Oliveira!</div>
+    <div>Onze anos juntos, compartilhando sorrisos, sonhos e desafios que só fortaleceram o que construímos... cada momento ao seu lado é uma parte preciosa da minha história...</div>
+    </div>
+
+    <div class="slideshow" id="slideshow"></div>
+
+      <div class="side-text">
+        <div>...e eu mal posso esperar para viver todos os próximos capítulos, de mãos dadas, descobrindo novos caminhos, com o mesmo amor e carinho que sempre nos uniu.</div>
+      <div id="days-together"></div>
+      </div>
+    
+    <div class="heart"></div>
+    
+  <script src="script.js"></script>
 </body>
 </html>
